# AgentArena

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/agentarena/: __init__.py  main.py  worker_cli.py
backend/src/agentarena/api/: agents.py  datasets.py  evaluation.py  reports.py  system.py  tasks.py  workers.py
backend/src/agentarena/core/: __init__.py  config.py  database.py  init_db.py  llm_probe.py  nacos_loader.py  worker_registry.py
backend/src/agentarena/evaluation_engine/: __init__.py  agent_runner.py  arena_ranking.py  llm_comparison.py  llm_judge.py  persona.py
backend/src/agentarena/models/: __init__.py  agent.py  base.py  comparison.py  dataset.py  evaluation.py  leaderboard.py  system_config.py  task.py
backend/src/agentarena/schemas/: agent_schema.py  common.py  dataset_schema.py  report_schema.py  task_schema.py  worker_schema.py
backend/src/agentarena/services/: evaluation_service.py  langfuse_prompts.py  reverse_validation_service.py  summary_report_service.py  task_run_elo_service.py
backend/src/agentarena/utils/: excel_importer.py  testcase_id.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  build-push.bat  docker-compose.yml
frontend/: docker-entrypoint.sh  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/api/: client.ts
frontend/src/components/: MainLayout.tsx  SummaryReportDetail.tsx
frontend/src/pages/: _app.tsx  _document.tsx  (+7 more)
scripts/: generate_excel_template.py
templates/: README.md  testcase-import-template.xlsx
(+4 files in other folders)
